--- a/tes.html
+++ b/tes.html
@@ -1,2 +1,28 @@
-yuhuuuu
-nyoba in EHE
+<!DOCTYPE html> 
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pengisian KRRS Online</title>
+<link rel="stylesheet" href="Style.css">
+  </head>
+  <body>
+    <div class="bg_image">
+      <div class="header" style="height:1.8125cm; width:50cm;">
+      <img src="asset/untarputih.png" alt="logo" style="width: 50px; margin-left: 8%; margin-top: 3px;">
+        <h1 style="margin-top: -60px; margin-left: 500px; font-size: 30pt; color:white;">Pengisian KRRS Online</h1>
+      </div>
+    </div>
+    <div class="center" style="margin-left: -28%; margin-top: 3%; height:250px; ">
+        <form style="padding-top: 50px;">
+            <label for="email" style="font-weight: bolder;">Masukkan Email</label>
+            <input type="text" id="email" name="Masukkan email" placeholder="Email">
+            <a href="login.html" style="color:#A01627; font-size: 10pt;">Kembali ke login page</a>
+      </form>
+      <div style="margin-top:22px; margin-left:155px; ">
+        <input type="submit" value="Continue" style="background-color:#A01627; color:white; font-size: 10; width:175px">
+      &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+    </div>
+</div>
+  </body>
