--- a/Login.html
+++ b/Login.html
@@ -5,36 +5,44 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pengisian KRRS Online</title>
-<link rel="stylesheet" href="Style.css">
+<link rel="stylesheet" href="Style1.css">
   </head>
   <body>
-    <div class="bg_image"></div>
+    <div class="bg_image">
+      <div class="header">
+      <img src="asset/untarputih.png" alt="logo" style="width: 50px; margin-left: 8%; margin-top: 10px;">
+        <h1 style="margin-top: -60px; margin-left: 500px; font-size: 30pt; color:white;">Pengisian KRRS Online</h1>
+      </div>
+    </div>
     <div class="center">
-      <h1>Sign Up</h1>
-      <form method="post">
-        <div class="txt_field">
-          <input type="text" required>
-          <span></span>
-          <label>Username</label>
-        </div>
-        <div class="txt_field">
-          <input type="password" required>
-          <span></span>
-          <label>Password</label>
-        </div>
-        <label>Level:
-          <select>
+      <div class="login-form"style="color:white;">
+        <h2 style="margin-left: 15% ; padding-top: 2%;">UNIVERSITAS TARUMANAGARA</h2>
+      </div>
+      <div>
+      <form style="margin-top: 25px; margin-left: -5px;font-weight: bold; ">
+        <label>Username : </label>
+        <input type="text" name="username" placeholder="Masukkan username" >
+        <label>Password : </label>
+        <input type="password" name="password" placeholder="Masukkan password">
+        <label>Level Akses :
+          <select style="width:80%; height:100%; margin-left: 100px;">
             <option value="Mahasiswa">Mahasiswa</option>
             <option value="Admin">Admin</option>
           </select>
         </label>
+      </form>
+      </div>
         <div>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</div>
         <div class="forgotpass_link"></div>
-        <div class="pass"><a href="#">Forgot Password?</a></div>
-        <input type="submit" value="Login">
-        &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+        <div class="pass">
+          <a href="Lupapassword.html" style=" color:black; text-decoration: none;">Lupa Password ?</a>
         </div>
+        <div class="button-login" style="margin-top: -60px; margin-left:350px">
+            <input type="submit" value="Login" style="background-color:#A01627; color:white; font-size: 10;">
+          &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+        </div>
+        </div>
+        
       </form>
-    </div>
   </body>
 </html>
